--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -22,12 +22,13 @@
 @sourceSansProFontFamily:    "Source Sans Pro", sans-serif;
 @oswaldFontFamily:         'Oswald', sans-serif;
 
+@baseFontSize:          11pt;
 @baseFontFamily:        @sourceSansProFontFamily;
 @altFontFamily:         @oswaldFontFamily;
 
 @headingsFontFamily:    @oswaldFontFamily; // empty to use BS default, @baseFontFamily
-//@headingsFontWeight:    bold;    // instead of browser default, bold
-//@headingsColor:         inherit; // empty to use BS default, @textColor
+@headingsFontWeight:    bold;    // instead of browser default, bold
+@headingsColor:         #9b9c9e; // empty to use BS default, @textColor
 
 // Buttons
 // -------------------------
