--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -28,10 +28,11 @@
       line-height:2em;
       font-size: 19.25pt;
     }
-    & a.more {
+    & .more {
       position: absolute;bottom: 0;right: 0;background: inherit;
       background-color:@bodyBackground;
       padding:0 10px;
+      & a{ margin-left:5px;}
     }
   }
 }
