update sidebar nav. lazy load tab content

--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -22,7 +22,7 @@
 @sourceSansProFontFamily:    "Source Sans Pro", sans-serif;
 @oswaldFontFamily:         'Oswald', sans-serif;
 
-@baseFontSize:          11pt;
+@baseFontSize:          14px;
 @baseFontFamily:        @sourceSansProFontFamily;
 @altFontFamily:         @oswaldFontFamily;
 
