--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -49,9 +49,25 @@
 
   & .dashboard-section{
     margin:40px 0 0 0;
+//    border-bottom: 1px solid #e9e9e9;
+
     &:first-child{
       margin-top:0;
       border-bottom: 1px solid #e9e9e9;
+    }
+    &:last-child{
+//        border-bottom: none;
+    }
+
+    &.alt{
+        background-color: #eee;
+        margin:0;
+        padding:10px 0 10px 0;
+        .border-radius(6px);
+
+        & .dashboard-unit{
+            padding-bottom: 0;
+        }
     }
   }
 
@@ -60,6 +76,10 @@
     z-index: 1;
     overflow: hidden;
     padding-bottom:30px;
+
+    &.alt{
+      background-color: #eee;
+    }
 
     & select{width:100%;}
     & h3{margin-top:0;margin-bottom:30px;}
