pic shadows with css. remove image.

--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -69,6 +69,12 @@
             padding-bottom: 0;
         }
     }
+
+    &.feed{
+        & .dashboard-unit{
+            & h3 { margin:0; }
+        }
+    }
   }
 
   & .dashboard-unit{
