--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -43,3 +43,12 @@
 @navbarCollapseWidth:             767px;
 @navbarBrandColor:                #fffefe;
 
+//Mixing
+//--------------------------
+.skew-rotate(@x, @y) {
+  -webkit-transform: skew(@x) rotate(@y);
+     -moz-transform: skew(@x) rotate(@y);
+      -ms-transform: skew(@x) rotate(@y);
+       -o-transform: skew(@x) rotate(@y);
+          transform: skew(@x) rotate(@y);
+}
