--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -3,13 +3,32 @@
   margin-top:20px;
   border-bottom:1px solid #ced0d2;
 
-  .shadow {
-    background:url('/static/img/image-shadow.png') no-repeat 0px 132px;
-    @media (max-width: 980px){
-      text-align:center;
-      background:url('/static/img/image-shadow.png') no-repeat 50% 132px;
+    .media-pic {
+        border:1px solid #e1e1e1;
+        padding: 7px;
+        margin:0 7px 7px;
+        position:relative;
+        background: #ffffff;
+
+        &:before, &:after{
+            content: '';
+            z-index: -1;
+            position: absolute;
+            left: 10px;
+            bottom: 10px;
+            width: 60%;
+            max-width: 240px;
+            max-height: 110px;
+            height: 70%;
+            .box-shadow(0 10px 5px #dadada);
+            .skew-rotate(-15deg, -6deg);
+        }
+        &:after{
+            left: auto;
+            right:10px;
+            .skew-rotate(15deg, 6deg);
+        }
     }
-  }
 
   & .article-text{
     overflow: hidden;
