edit/delete game from mygames revised

--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -70,11 +70,9 @@
         }
     }
 
-    &.feed{
-        & .dashboard-unit{
-            & h3 { margin:0; }
-        }
-    }
+    &.feed{& .dashboard-unit{& .article{
+            & h3 { margin:0;line-height:2em;}
+    }}}
   }
 
   & .dashboard-unit{
