--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -88,6 +88,28 @@
     & select{width:100%;}
     & h3{margin-top:0;margin-bottom:30px;}
 
+    & .step{
+        background-color:#e1e1e1;
+        padding: 0 10px 10px;
+        margin-bottom:10px;
+        max-width: 400px;
+        @media(max-width: 600px){max-width: 100%;}
+
+        &.toolbar{
+            max-width:none;
+            margin-bottom:0;
+            
+        }
+
+        .border-radius(5px);
+        & h3 {margin-bottom:10px;}
+        & .step-no {
+            text-shadow:1px 1px @headingsColor;
+            color:@white;
+            margin-right:10px;
+        }
+    }
+
     &:hover{& .dashboard-img{
       border-color: rgba(153, 153, 153, 0.3);
       & img {.opacity(80);}
