--- a/apps/web/priv/static/igratch/igratch.less
+++ b/apps/web/priv/static/igratch/igratch.less
@@ -4,5 +4,6 @@
 @import "common.less";
 @import "slider.less";
 @import "buttons.less";
+@import "forms.less";
 @import "articles.less";
 @import "account.less";
