comments to feed

--- a/apps/web/priv/static/igratch/buttons.less
+++ b/apps/web/priv/static/igratch/buttons.less
@@ -14,7 +14,7 @@
   background-color:#048eb1;
 }
 .btn-orange {
-    background-color:#e69805;
+    background-color:#fee732;
 }
 .btn-grey {
     background-color:#b3babf;
