--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -6,7 +6,7 @@
 
 // Scaffolding
 // -------------------------
-//@bodyBackground:        #dcdee0;
+@bodyBackground:        #dcdee0;
 @textColor:             #666666;
 
 // Typography
@@ -19,16 +19,16 @@
     url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v5/ODelI1aHBYDBqgeIAH2zlBM0YzuT7MdOe03otPbuUS0.woff) format('woff');
 }
 
-@sourceSansProFontFamily:    "Source Sans Pro", sans-serif;
-@oswaldFontFamily:         'Oswald', sans-serif;
+@sourceSansProFontFamily:   "Source Sans Pro", sans-serif;
+@oswaldFontFamily:          'Oswald', sans-serif;
 
-@baseFontSize:          14px;
-@baseFontFamily:        @sourceSansProFontFamily;
-@altFontFamily:         @oswaldFontFamily;
+@baseFontSize:              11px;
+@baseFontFamily:            @sourceSansProFontFamily;
+@altFontFamily:             @oswaldFontFamily;
 
-@headingsFontFamily:    @oswaldFontFamily; // empty to use BS default, @baseFontFamily
-@headingsFontWeight:    bold;    // instead of browser default, bold
-@headingsColor:         #9b9c9e; // empty to use BS default, @textColor
+@headingsFontFamily:        @oswaldFontFamily; // empty to use BS default, @baseFontFamily
+@headingsFontWeight:        bold;    // instead of browser default, bold
+@headingsColor:             #9b9c9e; // empty to use BS default, @textColor
 
 // Buttons
 // -------------------------
