--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -1,12 +1,13 @@
 /************* ARTICLES *************/
 .article{
-  margin-top:20px;
-  border-bottom:1px solid #ced0d2;
+    margin-top:15px;
+    border-bottom:2px solid @white;
+    border-bottom-style:groove;
 
     .media-pic {
         border:1px solid #e1e1e1;
         padding: 4px;
-        margin:0 4px 8px;
+        margin:5px 4px 8px;
         position:relative;
         background: #ffffff;
 
@@ -20,13 +21,13 @@
             max-width: 240px;
             max-height: 110px;
             height: 70%;
-            .box-shadow(0 10px 5px #dadada);
-            .skew-rotate(-15deg, -6deg);
+            .box-shadow(0 10px 5px #9b9c9e);
+            .skew-rotate(-15deg, -5deg);
         }
         &:after{
             left: auto;
             right:10px;
-            .skew-rotate(15deg, 6deg);
+            .skew-rotate(15deg, 5deg);
         }
     }
 
@@ -35,7 +36,7 @@
     max-height: 132px;
     height: 9em;
     position:relative;
-    & h1,& h2,& h3,& h4 { margin:0; font-size:1em;}
+    & h1,& h2,& h3,& h4 { margin:0;}
     & p {
       margin:0;
       display:inline;
