--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -1,6 +1,6 @@
 .feed-title {
-    border-bottom:1px solid white;
-    box-shadow: 1px 1px #eeeeee;
+    border-bottom: 2px solid @white;
+    border-bottom-style: groove;
 
     & .span1 {
         padding:0 5px;
@@ -23,4 +23,9 @@
     background:white;
     border-bottom: 2px solid #079ebd;
     color:black;
+
+    &.btn-toolbar{
+        margin:0;
+        padding: 10px 5px;
+    }
 }
