remove old feed

--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -86,7 +86,7 @@
     }
 
     & select{width:100%;}
-    & h3{margin-top:0;margin-bottom:30px;}
+    //& h3{margin-top:0;margin-bottom:30px;}
 
     & .step{
         background-color:#e1e1e1;
