--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -55,6 +55,9 @@
       & a{ margin-left:5px;}
     }
   }
+    &.warning{
+        background-color: @warningBackground;
+    }
 }
 
 .homepage-article, .game-article  {
