--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -10,12 +10,15 @@
     }
     & .checkbox {
         padding-top:0;
-        padding-left:23px;
+        padding-left:22px;
     }
     & .close {
         padding:2px 12px;
         margin-top:7px;
         display:none;
+    }
+    &.comments{
+        border-bottom:none;
     }
 }
 
@@ -28,4 +31,11 @@
         margin:0;
         padding: 10px 5px;
     }
+}
+
+.comment-reply {
+    margin:0;
+    padding:0;
+    font-size:inherit;
+
 }
