--- a/apps/web/priv/static/igratch/articles.less
+++ b/apps/web/priv/static/igratch/articles.less
@@ -1,6 +1,7 @@
 /************* ARTICLES *************/
 .article{
-    margin-top:15px;
+    padding-top:15px;
+    padding-bottom: 5px;
     border-bottom:2px solid @white;
     border-bottom-style:groove;
 
