--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -1,3 +1,16 @@
+.feed {
+    &.comments-flat{
+        background: @white;
+        .box-shadow(0 2px 3px 1px rgba(0,0,0,.1));
+        margin-left:0px;
+
+        & .feed-title {
+            border-bottom: 1px solid #079ebd;
+            & i {color: #079ebd;}
+        }
+    }
+}
+
 .feed-title {
     border-bottom: 2px solid @white;
     border-bottom-style: groove;
@@ -14,7 +27,6 @@
     }
     & .close {
         padding:2px 12px;
-        margin-top:7px;
         display:none;
     }
     &.comments{
