--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -3,10 +3,26 @@
         background: @white;
         .box-shadow(0 2px 3px 1px rgba(0,0,0,.1));
         margin-left:0px;
+        padding-bottom: 5px;
+
+        & .row-fuid{
+            margin: 0 0;
+        }
+
+        & .article{
+            margin: 0;
+            padding:0;
+        }
 
         & .feed-title {
             border-bottom: 1px solid #079ebd;
+            margin-bottom: 5px;
             & i {color: #079ebd;}
+        }
+    }
+    & .comments {
+        & .article {
+            border:none;
         }
     }
 }
