--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -31,6 +31,10 @@
     border-bottom: 2px solid @white;
     border-bottom-style: groove;
 
+    & h3, & h4 {
+        line-height:inherit;
+    }
+
     & .span1 {
         padding:0 5px;
     }
@@ -42,11 +46,18 @@
         padding-left:22px;
     }
     & .close {
-        padding:2px 12px;
+        padding:0 12px;
         display:none;
     }
     &.comments{
         border-bottom:none;
+    }
+    & .selection-ctl{
+        & .btn{
+            display:inline;
+            margin-left:10px;
+            font-size:100%;
+        }
     }
 }
 
