--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -73,6 +73,13 @@
         margin:0;
         padding: 10px 5px;
     }
+
+    &.row-fluid{
+        margin:0;
+    }
+    & .input{
+        padding: 10px 5px;
+    }
 }
 
 .comment-reply {
