filter product messages

--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -43,6 +43,9 @@
 @navbarCollapseWidth:             767px;
 @navbarBrandColor:                #fffefe;
 
+// Nav
+@navBorderColor:        @white;
+
 //Mixing
 //--------------------------
 .skew-rotate(@x, @y) {
