--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -86,4 +86,40 @@ h1,h2,h3,h4,h5,h6,h7 {
   top:auto;
 }
 
+// Give the tabs something to sit on
+.nav-tabs {
+    border-bottom: 1px solid @navBorderColor;
+    border-bottom-style: groove;
+    margin-bottom: 0;
+}
+// Make the list-items overlay the bottom border
+.nav-tabs > li {
+  margin-bottom: -1px;
+}
+// Actual tabs (as links)
+.nav-tabs > li > a {
+    border: 1px solid transparent;
+    .border-radius(4px 4px 0 0);
+    &:hover,
+    &:focus {
+        border-color: @grayLighter @grayLighter @linkColor;
+        border-bottom-width: 1px;
+    }
+}
+// Active state, and it's :hover/:focus to override normal :hover/:focus
+.nav-tabs > .active > a,
+.nav-tabs > .active > a:hover,
+.nav-tabs > .active > a:focus {
+    color: @gray;
+    background-color: @bodyBackground;
+    border: 1px solid @navBorderColor;
+    border-style: groove;
+    border-bottom-color: transparent;
+}
+
+.page-header {
+    border-bottom: 2px solid @white;
+    border-bottom-style: groove;
+}
+
 #n2ostatus{ word-break: break-word; }
