--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -138,6 +138,11 @@
       }
       &.img-polaroid{padding:0;}
     }
+    & .dashboard-img-ctl{
+        & .file_upload{
+            width:188px;
+        }
+    }
 
     & .profile-info-wrapper{
       min-width:370px;
