--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -80,6 +80,13 @@
     & .input{
         padding: 10px 5px;
     }
+    & .file_upload{
+        margin: 10px 5px;
+    }
+    & h4{
+        margin:0 5px 0;
+        padding: 5px 0;
+    }
 }
 
 .comment-reply {
