--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -1,6 +1,6 @@
 body{
   padding-top:0;
-  @media (min-width: 767px) {padding-top:60px;}
+  @media (min-width: 767px) {padding-top:68px;}
 }
 
 a{&:hover {text-decoration:none;}}
@@ -120,6 +120,14 @@ h1,h2,h3,h4,h5,h6,h7 {
 .page-header {
     border-bottom: 2px solid @white;
     border-bottom-style: groove;
+}
+
+.cart-number{
+    position: absolute;
+    width: 2em;
+    height: 100%;
+    text-align: center;
+    opacity: 1;
 }
 
 #n2ostatus{ word-break: break-word; }
