--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -131,6 +131,7 @@
       .border-radius(500px);
 
       z-index: -1;
+
       & img{
         .transition(all 0.2s);
         .border-radius(inherit);
@@ -318,5 +319,8 @@
   }
 }
 
-
+.product-price-list{
+    border-bottom:2px solid @white;
+    border-bottom-style:groove;
+}
 
