--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -79,6 +79,15 @@ h1,h2,h3,h4,h5,h6,h7 {
   & a {color:#94989d;&:hover{color:#005580;}}
 }
 
+.footer-shadow{
+
+}
+
+.footer-highlight{
+    position:relative;
+    margin-top:100px;
+}
+
 .modal-login{
   position:relative;
   margin: 50px auto 20px;
@@ -120,6 +129,14 @@ h1,h2,h3,h4,h5,h6,h7 {
 .page-header {
     border-bottom: 2px solid @white;
     border-bottom-style: groove;
+}
+
+.page-header-sm{
+    background-color: white;
+    padding: 10px;
+    .box-shadow(0 2px 3px 1px rgba(0, 0, 0, 0.1));
+    margin: 10px 0;
+    font-size: large;
 }
 
 .cart-number{
