--- a/apps/web/priv/static/igratch/reviews.less
+++ b/apps/web/priv/static/igratch/reviews.less
@@ -1,6 +1,23 @@
 @import "variables.less";
-@import "../bootstrap/less/bootstrap.less";
+
+@import "../bootstrap/less/mixins.less";
+@import "../bootstrap/less/reset.less";
+@import "../bootstrap/less/scaffolding.less";
+@import "../bootstrap/less/grid.less";
+@import "../bootstrap/less/layouts.less";
+@import "../bootstrap/less/type.less";
+@import "../bootstrap/less/code.less";
+@import "../font-awesome/less/font-awesome.less";
+@import "../bootstrap/less/dropdowns.less";
+@import "../bootstrap/less/component-animations.less";
+@import "../bootstrap/less/close.less";
+@import "../bootstrap/less/buttons.less";
+@import "../bootstrap/less/alerts.less";
+@import "../bootstrap/less/navs.less";
+@import "../bootstrap/less/navbar.less";
+@import "../bootstrap/less/utilities.less";
 @import "../bootstrap/less/responsive.less";
+
 @import "common.less";
 @import "buttons.less";
 @import "articles.less";
