define link color

--- a/apps/web/priv/static/igratch/variables.less
+++ b/apps/web/priv/static/igratch/variables.less
@@ -51,6 +51,7 @@
 // -------------------------
 @navbarCollapseWidth:             767px;
 @navbarBrandColor:                #fffefe;
+@navbarLinkColor:                 @white;
 
 // Nav
 @navBorderColor:        @white;
