--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -52,8 +52,9 @@ h1,h2,h3,h4,h5,h6,h7 {
       &.profile-picture{
         padding: 0;
         margin: -9px 0 0 10px;
-        background-color:transparent !important;
-        &:hover{background-color:transparent !important;}
+        @media (max-width: 767px) {
+            margin:0 0 0 10px;
+        }
       }
     }
   }
