--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -21,8 +21,13 @@
         }
     }
     & .comments {
+
         & .article {
             border:none;
+        }
+        & .btn-toolbar{
+            font-size:initial;
+            margin-bottom:0;
         }
     }
 }
