--- a/apps/web/priv/static/igratch/common.less
+++ b/apps/web/priv/static/igratch/common.less
@@ -134,10 +134,14 @@ h1,h2,h3,h4,h5,h6,h7 {
 
 .page-header-sm{
     background-color: white;
-    padding: 10px;
+    padding: 10px 0;
     .box-shadow(0 2px 3px 1px rgba(0, 0, 0, 0.1));
     margin: 10px 0;
     font-size: large;
+    
+    & a:first-child{
+        margin-left:10px;
+    }
 }
 
 .cart-number{
