fix notification. session -> cache

--- a/apps/web/priv/static/igratch/account.less
+++ b/apps/web/priv/static/igratch/account.less
@@ -43,6 +43,10 @@
   }
 }
 
+.dash-tab-content{
+    min-height:400px;
+}
+
 .dashboard{
   margin-top:40px;
   @media (max-width: 767px){margin-top:0;}
