--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -1,4 +1,6 @@
 .feed {
+    overflow: hidden;
+
     &.comments-flat{
         background: @white;
         .box-shadow(0 2px 3px 1px rgba(0,0,0,.1));
