--- a/apps/web/priv/static/igratch/igratch.less
+++ b/apps/web/priv/static/igratch/igratch.less
@@ -1,6 +1,6 @@
-@import "variables.less";
-@import "../bootstrap/less/bootstrap.less";
+@import "ibootstrap.less";
 @import "../bootstrap/less/responsive.less";
+
 @import "common.less";
 @import "slider.less";
 @import "buttons.less";
