--- a/apps/web/priv/static/igratch/index.less
+++ b/apps/web/priv/static/igratch/index.less
@@ -1,5 +1,5 @@
+@import "../bootstrap/less/variables.less";
 @import "variables.less";
-
 @import "../bootstrap/less/mixins.less";
 @import "../bootstrap/less/reset.less";
 @import "../bootstrap/less/scaffolding.less";
