--- a/apps/web/priv/static/igratch/reviews.less
+++ b/apps/web/priv/static/igratch/reviews.less
@@ -18,6 +18,9 @@
 @import "../bootstrap/less/utilities.less";
 @import "../bootstrap/less/responsive.less";
 
+@import "../feed_ui/less/feed_ui_bt2.less";
+@import "../feed_ui/less/input_bt2.less";
+
 @import "common.less";
 @import "buttons.less";
 @import "articles.less";
