--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -1,73 +1,41 @@
-.feed {
-    overflow: hidden;
-
+.fd-ui {
+    margin-top: 0px;
+    margin-bottom: 0px;
     &.comments-flat{
-        background: @white;
+        background: #fff;
         .box-shadow(0 2px 3px 1px rgba(0,0,0,.1));
-        margin-left:0px;
+        margin:0 0 50px 0;
         padding-bottom: 5px;
 
-        & .row-fuid{
-            margin: 0 0;
-        }
-
-        & .article{
-            margin: 0;
-            padding:0;
-        }
-
-        & .feed-title {
+        & .fd-title{
             border-bottom: 1px solid #079ebd;
-            margin-bottom: 5px;
-            & i {color: #079ebd;}
+            margin:0 0 5px;
+
+            .fd-title-i{
+                font-size: @baseFontSize * 1.25;
+                font-weight: @headingsFontWeight;
+                padding:0;
+            }
         }
-    }
-    & .comments {
 
-        & .article {
-            border:none;
+        & .fd-entry{
+            margin:0px 0px 0px 0px;
+            padding:0px 0px 0px 0px;
+            border-bottom:2px solid #ffffff;
+            border-bottom-style: groove;
+
+            & .fd-entry-container{ margin: 0; padding: 0; .fd-make-col(12); }
+            img {max-width:100%;}
+            & .fd-entry-container{ margin: 0; padding: 0; & .media-body{overflow:initial;} }
         }
-        & .btn-toolbar{
-            font-size:initial;
-            margin-bottom:0;
-        }
-    }
-}
+        & .fd-body{ padding:0; margin: 0; }
 
-.feed-title {
-    border-bottom: 2px solid @white;
-    border-bottom-style: groove;
-
-    & h3, & h4 {
-        line-height:inherit;
-    }
-
-    & .span1 {
-        //padding:0 5px;
-    }
-    & .span11 {
-        padding-right: 5px;
-    }
-    & .checkbox {
-        padding-top:0;
-        padding-left:25px;
-    }
-    & .close {
-        padding:0 12px;
-        display:none;
+        & .comments{ & .fd-body{} }
     }
     &.comments{
-        border-bottom:none;
-    }
-    & .selection-ctl{
-        & .btn{
-            display:inline;
-            margin-left:10px;
-            font-size:100%;
+        & .fd-body{
+            padding-bottom:0;
         }
-    }
-    & .traverse-ctl{
-        margin-top:-3px;
     }
 }
 
