--- a/apps/web/priv/static/igratch/reviews.less
+++ b/apps/web/priv/static/igratch/reviews.less
@@ -17,6 +17,9 @@
 @import "../bootstrap/less/navbar.less";
 @import "../bootstrap/less/utilities.less";
 @import "../bootstrap/less/responsive.less";
+@import "../bootstrap/less/tables.less";
+@import "../bootstrap/less/button-groups.less";
+@import "../bootstrap/less/forms.less";
 
 @import "../feed_ui/less/feed_ui_bt2.less";
 @import "../feed_ui/less/input_bt2.less";
