--- a/apps/web/priv/static/igratch/feed.less
+++ b/apps/web/priv/static/igratch/feed.less
@@ -37,19 +37,82 @@
             padding-bottom:0;
         }
     }
+
+    &.articles{
+        padding-top:15px;
+        padding-bottom: 5px;
+        border-bottom:2px solid @white;
+        border-bottom-style:groove;
+
+        .media-pic {
+            border:1px solid #e1e1e1;
+            padding: 4px;
+            margin:5px 4px 8px;
+            position:relative;
+            background: #ffffff;
+
+            &:before, &:after{
+                content: '';
+                z-index: -1;
+                position: absolute;
+                left: 10px;
+                bottom: 10px;
+                width: 60%;
+                max-width: 240px;
+                max-height: 110px;
+                height: 70%;
+                .box-shadow(0 10px 5px #9b9c9e);
+                .skew-rotate(-15deg, -5deg);
+            }
+            &:after{
+                left: auto;
+                right:10px;
+                .skew-rotate(15deg, 5deg);
+            }
+        }
+
+        & .article-text{
+            overflow: hidden;
+            max-height: 132px;
+            height: 9em;
+            position:relative;
+            & h1,& h2,& h3,& h4 { margin:0;}
+            & p {
+              margin:0;
+              display:inline;
+            }
+            & h3.title {
+              color:#9b9c9e;
+              margin:0;
+              padding:0;
+              line-height:2em;
+              font-size: 19.25pt;
+            }
+            & .more {
+              position: absolute;bottom: 0;right: 0;background: inherit;
+              background-color:@bodyBackground;
+              padding:0 10px;
+              & a{ margin-left:5px;}
+            }
+        }
+        &.warning{
+            background-color: @warningBackground;
+        }
+    }
 }
 
 .feed-table-header{
+    padding: 10px;
     background:white;
     border-bottom: 2px solid #079ebd;
     color:black;
 
-    &.btn-toolbar{
+    &.btn-toolbar,&.in-btn-toolbar{
         margin:0;
         padding: 10px 5px;
     }
 
-    &.row-fluid{
+    &.row-fluid, &.in-row{
         margin:0;
     }
     & .input{
